# StarshotOCR

./: README.md  bun.lockb  components.json  index.html  package.json  tailwind.config.js  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: configlink.rs  mod.rs  mouselink.rs  screenlink.rs
src/components/: Titlebar.comp.vue
src/routes/: Home.vue  Startup.vue
src/static/: fontdeclare.css  tailwind.css  vars.css
